2001-11-17  Martin Weber  <martweb@gmx.net>
	
	* fit.c (fit_with_least_squares):
	Force closed splines to be split.

2001-11-17  Martin Weber  <martweb@gmx.net>
	
	* fit.c (find_half_tangent): fixed a problem in calculation of
	halftangent with cyclic curves.

2001-11-11  Masatake YAMATO  <yamato@redhat.com>

	* pxl-outline.c (find_outline_pixels): 
	(find_centerline_pixels): Put cancel points.

	* main.c (main): Use at_splines_new_full.

	* fit.[hc] (fitted_splines): Put cancel points.
	If `test_cancel' is given and it returns TRUE,
	execution is stopped and the control is returned.

	* types.h (testcancel_func): New type.

	* autotrace.h (at_testcancel_func): New type.

	* autotrace.[hc] (at_splines_new_full): New function.
	at_splines_new_with_progress is removed.
	at_splines_new_full is almost the same as 
	`at_splines_new_with_progress' but has cancel points.

2001-11-09  Masatake YAMATO  <yamato@redhat.com>

	* despeckle.h: Remove nest '/*'.

	* pxl-outline.h: Change the indent style.
	Lines were too long.

2001-10-14  Martin Weber  <martweb@gmx.net>

        * output-dxf.c: adopted so it could also be compiled as C++
	
2001-10-14  Martin Weber  <martweb@gmx.net>

        * NEWS: Upated

	* README (version): Updated

	* THANKS: Updated.

	* autotrace.dsp (SOURCE): Update again.
	
2001-10-14  Martin Weber  <martweb@gmx.net>

	* autotrace.dsp: adopted to newer versions of ImageMagick. 

	* input-magick.c: Likewise.

2001-10-14  Martin Weber  <martweb@gmx.net>

	* output-dxf.h: changed wrong define constant
	* curve.c, pxl-outline.c, fit.c: removed warning in 
	notify_progress for Visual C++
	* output.c: added output_dxf_writer

2001-10-28  Masatake YAMATO  <yamato@redhat.com>

	* Makefile.am (output_src): Added output-dxf.[ch].

2001-10-28  Steffen Politzky <support@durst.de>

	Logged by Masatake YAMATO  <yamato@redhat.com>.
	
	* output-dxf.[ch]: New files.

2001-10-14  Martin Weber  <martweb@gmx.net>

	* main.c (read_command_line::long_options): Added